syntax = "proto3";

package natsPb;

option go_package = "/natsPb";


message IsFollowingGroup_REQUEST_request {
      uint64 follower = 1;
      repeated uint64 followings = 2;
}
message IsFollowingGroup_REQUEST_response {
      map<uint64, bool> result = 1;
}

